transparency and new palette

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<div class="canvas-section">
 						<div id="pixelGrid" class="pixel-grid" tabindex="0"></div>
 						<div class="keyboard-hint">
-							<p>Arrow keys: navigate | Shift+Arrow: draw | Space: paint | Cmd/Ctrl+Z: undo</p>
+							<p>Arrow keys: navigate | Space: paint | Cmd/Ctrl+Z: undo</p>
 						</div>
 					</div>
 				</div>
