--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 						<input type="range" id="gridSize" min="8" max="64" value="32" step="8" />
 						<span id="gridSizeValue">32</span>
 					</div>
+					<button id="saveBtn" class="btn">Save</button>
+					<button id="loadBtn" class="btn">Load</button>
 					<button id="clearBtn" class="btn">Clear</button>
 					<button id="exportBtn" class="btn">Export PNG</button>
 				</div>
@@ -44,6 +46,38 @@
 				</div>
 			</main>
 		</div>
+
+		<!-- Save Modal -->
+		<div id="saveModal" class="modal">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h2>Save Artwork</h2>
+					<button class="close-btn" id="closeSaveModal">&times;</button>
+				</div>
+				<div class="modal-body">
+					<label for="artworkName">Artwork Name:</label>
+					<input type="text" id="artworkName" placeholder="Enter a name for your artwork" />
+					<div class="modal-actions">
+						<button id="confirmSaveBtn" class="btn">Save</button>
+						<button id="cancelSaveBtn" class="btn btn-secondary">Cancel</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Load Modal -->
+		<div id="loadModal" class="modal">
+			<div class="modal-content modal-content-wide">
+				<div class="modal-header">
+					<h2>Load Artwork</h2>
+					<button class="close-btn" id="closeLoadModal">&times;</button>
+				</div>
+				<div class="modal-body">
+					<div id="savedArtworksList" class="saved-artworks-list"></div>
+				</div>
+			</div>
+		</div>
+
 		<script src="script.js"></script>
 	</body>
 </html>
