--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 					<button id="saveBtn" class="btn">Save</button>
 					<button id="loadBtn" class="btn">Load</button>
 					<button id="clearBtn" class="btn">Clear</button>
+					<button id="isoGridBtn" class="btn">Iso Grid</button>
 					<button id="exportBtn" class="btn">Export PNG</button>
 					<button id="exportSvgBtn" class="btn">Export SVG</button>
+					<button id="exportJsonBtn" class="btn">Export JSON</button>
 					<button id="vectorizeBtn" class="btn">Vectorize</button>
 				</div>
 			</header>
@@ -48,7 +50,7 @@
 					<div class="canvas-section">
 						<div id="pixelGrid" class="pixel-grid" tabindex="0"></div>
 						<div class="keyboard-hint">
-							<p>Arrow keys: navigate | Space: paint | Cmd/Ctrl+Z: undo</p>
+							<p>Arrow keys: navigate | Space: paint | Shift: straight lines | Cmd/Ctrl+Z: undo</p>
 						</div>
 					</div>
 					<div class="preview-section">
