--- a/index.html
+++ b/index.html
@@ -3,33 +3,20 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>ProblematicPixel</title>
+		<title>PixelFumble</title>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
 		<div class="container">
 			<header>
-				<h1>ProblematicPixel</h1>
+				<h1>PixelFumble</h1>
 				<div class="controls">
-					<div class="grid-size-control">
-						<label for="gridSize">Grid Size:</label>
-						<input type="range" id="gridSize" min="8" max="64" value="16" step="8" />
-						<span id="gridSizeValue">16</span>
-					</div>
-					<div class="move-controls">
-						<button id="moveUpBtn" class="btn btn-move" title="Move all pixels up">↑</button>
-						<button id="moveDownBtn" class="btn btn-move" title="Move all pixels down">↓</button>
-						<button id="moveLeftBtn" class="btn btn-move" title="Move all pixels left">←</button>
-						<button id="moveRightBtn" class="btn btn-move" title="Move all pixels right">→</button>
-					</div>
+					<div class="spacer"></div>
 					<button id="saveBtn" class="btn">Save</button>
 					<button id="loadBtn" class="btn">Load</button>
-					<button id="clearBtn" class="btn">Clear</button>
-					<button id="isoGridBtn" class="btn">Iso Grid</button>
-					<button id="exportBtn" class="btn">Export PNG</button>
-					<button id="exportSvgBtn" class="btn">Export SVG</button>
-					<button id="exportJsonBtn" class="btn">Export JSON</button>
-					<button id="vectorizeBtn" class="btn">Vectorize</button>
+					<div class="spacer"></div>
+					<button id="exportBtn" class="btn">Export</button>
 				</div>
 			</header>
 			<main>
@@ -37,15 +24,36 @@
 					<div class="palette-section">
 						<h2>Tools</h2>
 						<div class="tool-selector">
-							<button id="brushTool" class="tool-btn active">Brush</button>
-							<button id="bucketTool" class="tool-btn">Paint Bucket</button>
+							<button id="brushTool" class="tool-btn active" title="Brush"><i class="bi bi-brush"></i></button>
+							<button id="eraserTool" class="tool-btn" title="Eraser"><i class="bi bi-eraser"></i></button>
+							<button id="bucketTool" class="tool-btn" title="Paint Bucket"><i class="bi bi-paint-bucket"></i></button>
+						</div>
+						<div id="eraserSizeControl" class="eraser-size-control" style="display: none;">
+							<label for="eraserSize">Eraser Size:</label>
+							<input type="range" id="eraserSize" min="1" max="5" value="2" step="1" />
+							<span id="eraserSizeValue">2</span>
 						</div>
 						<h2>Color Palette</h2>
 						<div id="colorPalette" class="palette"></div>
-						<div class="selected-color-display">
-							<span>Selected:</span>
-							<div id="selectedColor" class="color-preview"></div>
+						<h2>Move all pixels</h2>
+						<div class="move-controls">
+							<button id="moveUpBtn" class="btn btn-move" title="Move all pixels up">↑</button>
+							<button id="moveLeftBtn" class="btn btn-move" title="Move all pixels left">←</button>
+							<button id="moveDownBtn" class="btn btn-move" title="Move all pixels down">↓</button>
+							<button id="moveRightBtn" class="btn btn-move" title="Move all pixels right">→</button>
 						</div>
+						<h2>Grid Size</h2>
+						<div class="grid-size-buttons">
+							<button class="btn-grid-size" data-size="8">8</button>
+							<button class="btn-grid-size" data-size="16">16</button>
+							<button class="btn-grid-size" data-size="24">24</button>
+							<button class="btn-grid-size" data-size="32">32</button>
+							<button class="btn-grid-size" data-size="40">40</button>
+							<button class="btn-grid-size" data-size="48">48</button>
+							<button class="btn-grid-size" data-size="56">56</button>
+							<button class="btn-grid-size" data-size="64">64</button>
+						</div>
+						<button id="clearBtn" class="btn btn-clear">Clear Canvas</button>
 					</div>
 					<div class="canvas-section">
 						<div id="pixelGrid" class="pixel-grid" tabindex="0"></div>
@@ -92,6 +100,36 @@
 			</div>
 		</div>
 
+		<!-- Export Modal -->
+		<div id="exportModal" class="modal">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h2>Export Artwork</h2>
+					<button class="close-btn" id="closeExportModal">&times;</button>
+				</div>
+				<div class="modal-body">
+					<div class="export-options">
+						<button id="exportPngBtn" class="btn export-option-btn">
+							<i class="bi bi-file-earmark-image"></i>
+							<span>Export as PNG</span>
+						</button>
+						<button id="exportSvgBtn" class="btn export-option-btn">
+							<i class="bi bi-filetype-svg"></i>
+							<span>Export as SVG</span>
+						</button>
+						<button id="exportJsonBtn" class="btn export-option-btn">
+							<i class="bi bi-filetype-json"></i>
+							<span>Export as JSON</span>
+						</button>
+						<button id="vectorizeBtn" class="btn export-option-btn">
+							<i class="bi bi-bezier2"></i>
+							<span>Vectorize (experimental)</span>
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<!-- Vectorize Modal -->
 		<div id="vectorizeModal" class="modal">
 			<div class="modal-content modal-content-wide">
@@ -110,8 +148,8 @@
 							Simplify paths
 						</label>
 						<div class="distance-control">
-							<label for="maxDistance">Max distance: <span id="maxDistanceValue">45</span></label>
-							<input type="range" id="maxDistance" min="15" max="150" value="45" step="15" />
+							<label for="maxDistance">Max distance: <span id="maxDistanceValue">30</span></label>
+							<input type="range" id="maxDistance" min="10" max="100" value="30" step="10" />
 						</div>
 						<button id="regenerateVector" class="btn">Regenerate</button>
 					</div>
