you can now change the grid size while there is a drawing on the canvas

--- a/index.html
+++ b/index.html
@@ -46,14 +46,11 @@
 						<div class="grid-size-buttons">
 							<button class="btn-grid-size" data-size="8">8</button>
 							<button class="btn-grid-size" data-size="16">16</button>
-							<button class="btn-grid-size" data-size="24">24</button>
 							<button class="btn-grid-size" data-size="32">32</button>
-							<button class="btn-grid-size" data-size="40">40</button>
-							<button class="btn-grid-size" data-size="48">48</button>
-							<button class="btn-grid-size" data-size="56">56</button>
 							<button class="btn-grid-size" data-size="64">64</button>
 						</div>
-						<button id="clearBtn" class="btn btn-clear">Clear Canvas</button>
+						<h2>Clear</h2>
+				<button id="clearBtn" class="btn btn-clear">Clear Canvas</button>
 					</div>
 					<div class="canvas-section">
 						<div id="pixelGrid" class="pixel-grid" tabindex="0"></div>
