Added undo button for mobile

--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
 							<button class="btn-grid-size" data-size="32">32</button>
 							<button class="btn-grid-size" data-size="64">64</button>
 						</div>
-						<h2>Clear</h2>
-				<button id="clearBtn" class="btn btn-clear">Clear Canvas</button>
+						<h2>Actions</h2>
+				<div class="action-buttons">
+					<button id="undoBtn" class="btn btn-secondary">Undo</button>
+					<button id="clearBtn" class="btn btn-secondary">Clear</button>
+				</div>
 					</div>
 					<div class="canvas-section">
 						<div id="pixelGrid" class="pixel-grid" tabindex="0"></div>
